# stylance

./: README.md  package-lock.json  package.json  pyproject.toml
app/: globals.css  page.tsx
app/components/: BrowseStyles.jsx  HeroSection.jsx  Navbar.jsx
app/constants/: index.jsx
app/scripts/: useCarousel.ts
