[tool.poetry]
name = "stylance"
version = "0.1.0"
description = "Freelance Styling App"
authors = ["nicopoulsen <pocho.pk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
